[package]
name = "neige"
version = "0.1.0"
edition = "2021"

[dependencies]
neige-macros = { path = "../macros", package = "macros" }

tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
hyper = { version = "1.1", features = ["http1", "http2", "client"] }
hyper-tls = "0.6"
